# topo-lightbulb-moment

./: .gitignore  CONTRIBUTING.md  README.md  compose.yaml
.devcontainer/: compose.webapp.yaml  devcontainer.webapp.json
.devcontainer/webapp/: compose.webapp.yaml  devcontainer.json
.devcontainer/zephyr/: compose.devcontainer.yaml  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: publish-zephyr-cache.yml  publish-zephyr-workspace.yml  publish-zephyr.yml
ollama/: Dockerfile  compose.yaml
webapp/: Dockerfile  README.md  compose.yaml  pyproject.toml
webapp/src/: app.py
webapp/src/static/assets/: licensefile
webapp/src/templates/: index.html
zephyr-application/: Dockerfile  Dockerfile.workspace  README.md  compose.yaml
zephyr-application/workdir/: CMakeLists.txt  prj.conf
zephyr-application/workdir/boards/imx93/: imx93_m33.conf  nxp-frdm-imx93.overlay  prj.conf
zephyr-application/workdir/boards/stm32mp257f/: ipm_stm32_ipcc.patch  prj.conf  resource_table.ld  stm32mp257f_dk_stm32mp257fxx_m33.overlay
zephyr-application/workdir/src/: main.c  stm32_ipcc_shim.c
